--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -2,7 +2,7 @@ html, body {height:100%;}
 body {
     font-family: 'Noto Sans TC', sans-serif;
     word-wrap: break-word;
-    background: #dedede;
+    background: #eee;
     color: #888;
 }
 html, *, *:before, *:after { box-sizing:border-box;}
