--- a/css/scss/_page.scss
+++ b/css/scss/_page.scss
@@ -66,7 +66,7 @@
 
 @media screen and (min-width: 1024px) {
     .r1020{border-radius: 20px;}
-    .ig02{
+    .mission-wall{
         .item-inner{padding: 30px 40px;}
         .item-main{
             padding: 0;
