--- a/twig/index.twig
+++ b/twig/index.twig
@@ -3,58 +3,67 @@
     <div class="home pd1 sb1 lt1">
         <div class="w08">
             <div class="mission-wall">
-            {% for item in mission_list %}
-                <div class="item tg-wrap item{{ loop.index }} {% if item.quota < 1 or item.done %}off{% endif %}">
-                    <div class="item-inner r1020">
-                        <div class="item-main row">
-                            <div class="col-12 node-mobile" data-child="dyn-title{{ loop.index }}">
-                                <div class="dyn-node" data-node="dyn-title{{ loop.index }}">
-                                    <h3 class="title fs1820 c0">{{ item.title }}</h3>
-                                </div>
-                            </div>
-                            <a class="figure" href="{{ item.url }}" title="{{ item.titlle }}">
-                                <img class="r1020" src="{{ item.src }}" width="140" height="140" alt="{{ item.titlle }}" loading="lazy">
+                {% for item in mission_list %}
+                    {% if item.ad %}
+                        <div class="item">
+                            <div class="tr fs16">贊助商</div>
+                            <a class="figure" href="#" target="_blank" title="贊助商名稱">
+                                <img src="../images/figure06.jpg" alt="" loading="lazy">
                             </a>
-                            <div class="text">
-                                <div class="node-pc" data-child="dyn-title{{ loop.index }}"></div>
-                                <div class="desc fs1416">{{ item.desc }}</div>
-                                <div class="btn-wrap row fjcsb faic">
-                                    {% if item.done %}
-                                        <a class="btn btn02 fw7 off" href="{{ item.url }}" title="您已完成此任務">您已完成此任務</a>
-                                    {% else %}
-                                        <a class="btn btn02 fw7" href="{{ item.url }}" title="點我前往完成任務">點我前往完成任務</a>
-                                    {% endif %}
-                                    {% if item.show_quota %}
-                                        <div class="node-pc" data-child="dyn-quota{{ loop.index }}"></div>
-                                    {% endif %}
-                                    <div class="node-pc" data-child="dyn-step{{ loop.index }}"></div>
+                        </div>
+                    {% else %}
+                        <div class="item tg-wrap item{{ loop.index }} {% if item.quota < 1 or item.done %}off{% endif %}">
+                            <div class="item-inner r1020">
+                                <div class="item-main row">
+                                    <div class="col-12 node-mobile" data-child="dyn-title{{ loop.index }}">
+                                        <div class="dyn-node" data-node="dyn-title{{ loop.index }}">
+                                            <h3 class="title fs1820 c0">{{ item.title }}</h3>
+                                        </div>
+                                    </div>
+                                    <a class="figure" href="{{ item.url }}" title="{{ item.titlle }}">
+                                        <img class="r1020" src="{{ item.src }}" width="140" height="140" alt="{{ item.titlle }}" loading="lazy">
+                                    </a>
+                                    <div class="text">
+                                        <div class="node-pc" data-child="dyn-title{{ loop.index }}"></div>
+                                        <div class="desc fs1416">{{ item.desc }}</div>
+                                        <div class="btn-wrap row fjcsb faic">
+                                            {% if item.done %}
+                                                <a class="btn btn02 fw7 off" href="{{ item.url }}" title="您已完成此任務">您已完成此任務</a>
+                                            {% else %}
+                                                <a class="btn btn02 fw7" href="{{ item.url }}" title="點我前往完成任務">點我前往完成任務</a>
+                                            {% endif %}
+                                            {% if item.show_quota %}
+                                                <div class="node-pc" data-child="dyn-quota{{ loop.index }}"></div>
+                                            {% endif %}
+                                            <div class="node-pc" data-child="dyn-step{{ loop.index }}"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% if item.show_quota %}
+                                    <div class="node-mobile" data-child="dyn-quota{{ loop.index }}">
+                                        <div class="dyn-node btn-item btn03" data-node="dyn-quota{{ loop.index }}">
+                                            今日剩餘 <strong class="fs18 color2">{{ item.quota }}</strong> 名額
+                                        </div>
+                                    </div>
+                                {% endif %}
+                                <div class="tg-content col-12">
+                                    <div class="list list01 row fjcc">
+                                        <ol class="fs1416 fw3">
+                                            {% for line in item.step|nl2br|split('\n') %}
+                                                {% if line|trim is not empty %}
+                                                    <li>{{ line|trim }}</li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ol>
+                                    </div>
+                                </div>
+                                <div class="node-mobile" data-child="dyn-step{{ loop.index }}">
+                                    <a class="dyn-node tg-btn btn04 fw3" data-target="item{{ loop.index }}" data-node="dyn-step{{ loop.index }}" href="#" title="查看任務步驟說明">查看任務步驟說明</a>
                                 </div>
                             </div>
                         </div>
-                        {% if item.show_quota %}
-                            <div class="node-mobile" data-child="dyn-quota{{ loop.index }}">
-                                <div class="dyn-node btn-item btn03" data-node="dyn-quota{{ loop.index }}">
-                                    今日剩餘 <strong class="fs18 color2">{{ item.quota }}</strong> 名額
-                                </div>
-                            </div>
-                        {% endif %}
-                        <div class="tg-content col-12">
-                            <div class="list list01 row fjcc">
-                                <ol class="fs1416 fw3">
-                                    {% for line in item.step|nl2br|split('\n') %}
-                                        {% if line|trim is not empty %}
-                                            <li>{{ line|trim }}</li>
-                                        {% endif %}
-                                    {% endfor %}
-                                </ol>
-                            </div>
-                        </div>
-                        <div class="node-mobile" data-child="dyn-step{{ loop.index }}">
-                            <a class="dyn-node tg-btn btn04 fw3" data-target="item{{ loop.index }}" data-node="dyn-step{{ loop.index }}" href="#" title="查看任務步驟說明">查看任務步驟說明</a>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
     </div>
