--- a/css/scss/_template.scss
+++ b/css/scss/_template.scss
@@ -109,9 +109,9 @@ $fontsize:(12,14,16,18,24,30);
     .title{padding-left: 10px;}
     strong{line-height: 1;}
     .off{
-        opacity: .6;
+        opacity: .4;
         a{pointer-events: none;}
-        td{background: #ddd;}
+        td{background: none;}
     }
 }
 
