--- a/twig/_layout.twig
+++ b/twig/_layout.twig
@@ -63,7 +63,7 @@
     <footer id="footer" class="footer pd1 sy1">
         <div class="w08 tc fs1214 fw3 lh16 cf">
             <div>本任務牆由智慧時尚股份有限公司負責經營服務。本公司保留隨時修改、變更、暫停或終止本活動內容之權利。</div>
-            <div class="row">
+            <div class="row fjcc">
                 <div class="col-12 col-md-auto">
                     客服信箱：<a href="mailto:service@open-life.com" title="service@open-life.com">service@open-life.com</a>
                 </div>
