--- a/css/scss/_template.scss
+++ b/css/scss/_template.scss
@@ -20,6 +20,7 @@ $fontsize:(12,14,16,18,24,30);
     padding: 0 20px;
     line-height: 36px;
     white-space: nowrap;
+    border: none;
 }
 .btn01, .btn02, .btn04{
     color: #fff;
