--- a/css/scss/base/_grid.scss
+++ b/css/scss/base/_grid.scss
@@ -311,7 +311,7 @@ $grid-row-columns:  6 !default;
   @mixin make-row() {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+  margin: 0;
   // margin-right: -$gutter / 2;
   // margin-left: -$gutter / 2;
 }
