--- a/twig/mission-download.twig
+++ b/twig/mission-download.twig
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="st1 tc">
-                <a class="btn02 fw7" href="mission-ok.html" title="點此下載APP開始任務">點此下載APP開始任務</a>
+                <a class="btn02 fw7" href="mission-download-ok.html" title="點此下載APP開始任務">點此下載APP開始任務</a>
             </div>
             <div class="tc fs1416 fw4 st2">※待完成任務後將跳至任務完成頁---若無需秀任務流程則秀這個</div>
             <div class="list list01 row fjcc st2">
