--- a/twig/mission-video.twig
+++ b/twig/mission-video.twig
@@ -40,7 +40,7 @@
                     <div class="fs1820">請點擊下方有興趣廣告</div>
                 </div>
                 <div class="miission-clik off">
-                    <a  href="mission-ok.html" title="{{ mission.name }}">
+                    <a  href="mission-video-ok.html" title="{{ mission.name }}">
                         <img src="{{ mission.src }}" alt="{{ mission.name }}" loading="lazy">
                     </a>
                 </div>
