--- a/twig/mission-list-download.twig
+++ b/twig/mission-list-download.twig
@@ -19,7 +19,7 @@
                 </div>
                 <!-- 任務未完成時加class:off -->
                 <div class="btn-wrap">
-                    <a class="btn02 fw7 off" href="#" title="點我取點(待完成任務)">點我取點(待完成任務)</a>
+                    <a class="btn02 fw7 off" href="#" title="點我取點(待點數入帳)">點我取點(待點數入帳)</a>
                 </div>
             </div>
             <div class="tb-wrap tb02 tb-js fw4 c5">
