--- a/twig/mission-video-ok.twig
+++ b/twig/mission-video-ok.twig
@@ -13,5 +13,6 @@
                 <a class="btn02 fw7" href="mission-list.html" title="返回上頁取點">返回上頁取點(回到任務列表)</a>
             </div>
         </div>
+        {% include "_adblock.twig" %}
     </div>
 {% endblock %}
