--- a/twig/mission-download-ok.twig
+++ b/twig/mission-download-ok.twig
@@ -10,5 +10,6 @@
                 <a class="btn02 fw7" href="mission-list-download.html" title="回到任務列表">回到任務列表</a>
             </div>
         </div>
+        {% include "_adblock.twig" %}
     </div>
 {% endblock %}
